if (TACO_SHARED_LIBRARY)
  set(TACO_LIBRARY_TYPE SHARED)
  message("-- Shared library")
else()
  set(TACO_LIBRARY_TYPE STATIC)
  message("-- Static library")
endif()

set(TACO_SRC_DIRS . parser index_notation lower ir codegen storage error util)

foreach(dir ${TACO_SRC_DIRS})
  file(GLOB TACO_HEADERS ${TACO_HEADERS} ${dir}/*.h)
  file(GLOB TACO_HEADERS ${TACO_HEADERS} ${TACO_INCLUDE_DIR}/taco/${dir}/*.h)
  file(GLOB TACO_SOURCES ${TACO_SOURCES} ${dir}/*.cpp)
endforeach()

set(TACO_HEADERS ${TACO_HEADERS} ../include/taco/ir_tags.h)
set(TACO_SOURCES ${TACO_SOURCES} ir_tags.cpp)

add_library(taco::taco ${TACO_LIBRARY_TYPE} ${TACO_HEADERS} ${TACO_SOURCES})
target_compile_definitions(taco::taco INTERFACE ${TACO_DEFINITIONS})
target_include_directories(taco::taco INTERFACE ${TACO_SRC_DIR})
if (CUDA)
  target_include_directories(taco::taco INTERFACE ${CUDA_INCLUDE_DIRS})
  target_link_libraries(taco::taco PUBLIC ${CUDA_LIBRARIES})
endif (CUDA)
install(TARGETS taco::taco DESTINATION lib)

if (LINUX)
  target_link_libraries(taco::taco PRIVATE ${TACO_LIBRARIES} dl)
else()
  target_link_libraries(taco::taco PRIVATE ${TACO_LIBRARIES})
endif()
